# Garry

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_REPORT.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  STATUS.md  STRUCTURE.md  docker-compose.yml  quickstart.sh
.garry/: config.toml.example
.kiro/specs/garry-git-workflow-tool/: design.md  requirements.md  tasks.md
docs/: ADAPTERS.md  ARCHITECTURE.md  BOT.md  CLI.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLATION.md  QUICKSTART.md  README.md  ROLES.md  SECURITY.md  STRUCTURE.md  WORKFLOW.md
examples/: README.md  config.toml
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  secret.yaml.example  service.yaml
src/: lib.rs  main.rs
src/bot/: adapter.rs  ci.rs  mod.rs  notifier.rs  queue.rs
src/bot/adapters/: github.rs  mock.rs  mod.rs
src/cli/: approve.rs  merge.rs  mod.rs  squash.rs  start.rs  update.rs  upload.rs
src/git/: branch.rs  commit.rs  mod.rs  remote.rs  repo.rs
src/review/: mod.rs
src/utils/: config.rs  error.rs  logger.rs  mod.rs
systemd/: garry-bot.service
tests/: integration_test.rs
